--- a/src/index.css
+++ b/src/index.css
@@ -137,6 +137,21 @@
    background: #1be21f;
 }
 
+.button_2 {
+   color: #fff !important;
+   border-color: #08c40b !important;
+   background: #08c40b !important;
+   border-radius: 8px !important;
+   font-weight: 600 !important;
+   font-size: 14px !important;
+}
+
+.button_2:hover {
+   color: #fff !important;
+   border-color: #1be21f !important;
+   background: #1be21f !important;
+}
+
 .button__reset > .button_3 {
    color: #fff;
    border-color: #de8f10;
